--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,450 @@
+body {
+  background: #252525; }
+
+.header {
+  background-image: url("../Foto/img.png");
+  background-position: top;
+  width: 1500px;
+  height: 1000px;
+  margin: auto; }
+  .header .header__container {
+    width: 1170px;
+    height: 100%;
+    margin: auto;
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-content: left;
+    padding-top: 50px; }
+    .header .header__container .header__top {
+      display: flex;
+      justify-content: space-between; }
+      .header .header__container .header__top .top__logo {
+        font-size: 50px;
+        line-height: 25px;
+        color: #262626;
+        font-weight: 400;
+        font-family: "Pacifico", cursive; }
+    .header .header__container .top__logo a {
+      text-decoration: none;
+      color: #262626; }
+    .header .header__container .top__logo a:hover {
+      /* text-decoration:overline 2px red; */
+      color: red; }
+    .header .header__container .top__navigation {
+      width: 560px;
+      height: 25px;
+      /* border: 2px solid red;  */
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      align-self: center; }
+      .header .header__container .top__navigation .navigation__button {
+        background-color: #fafafc;
+        font-size: 16px;
+        color: #262626;
+        font-weight: 700;
+        font-family: "Raleway", sans-serif;
+        text-align: right;
+        text-decoration: none;
+        padding-top: 8px; }
+      .header .header__container .top__navigation .navigation__button:hover {
+        /* text-decoration:overline 2px red; */
+        border-top: 2px solid red;
+        padding-top: 6px; }
+    .header .header__container .header__head {
+      font-size: 60px;
+      line-height: 25px;
+      color: #262626;
+      font-weight: 800;
+      font-family: "Raleway", sans-serif;
+      margin-top: 260px; }
+    .header .header__container .header__text {
+      width: 370px;
+      height: 70px;
+      font-size: 17px;
+      line-height: 27px;
+      color: #262626;
+      font-weight: 300;
+      font-family: "Raleway", sans-serif;
+      margin-top: 35px; }
+    .header .header__container .header__button {
+      background-color: #ff6033;
+      width: 201px;
+      height: 56px;
+      margin-top: 30px;
+      font-size: 20px;
+      color: #ffffff;
+      font-weight: 300;
+      font-family: "Raleway", sans-serif;
+      text-align: center;
+      cursor: pointer;
+      text-transform: uppercase; }
+    .header .header__container .header__button:hover {
+      transform: scale(1.2);
+      transition: transform 1s; }
+    .header .header__container .header__scroll {
+      margin-top: 295px;
+      margin-left: auto;
+      margin-right: auto;
+      transform: translate(50%, 50%); }
+
 .about {
-  color: blue; }
+  width: 1500px;
+  height: 700px;
+  margin: auto;
+  background-color: #00bfbf;
+  background-image: url("../Foto/img2.png");
+  background-repeat: no-repeat;
+  background-position: 170px 80px;
+  display: flex;
+  flex-direction: column; }
+  .about .about__head {
+    font-size: 90px;
+    line-height: 27px;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Raleway", sans-serif;
+    margin-top: 180px;
+    margin-left: 870px; }
+  .about .about__text {
+    width: 480px;
+    height: 190px;
+    font-size: 17px;
+    line-height: 27px;
+    color: #ffffff;
+    font-weight: 300;
+    font-family: "Raleway", sans-serif;
+    margin-top: 35px;
+    margin-left: 870px; }
+    .about .about__text div {
+      padding-top: 10px; }
 
-p {
-  color: green; }
+.blog__container {
+  padding: 0;
+  background: #b07cf7;
+  width: 1500px;
+  height: 864px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center; }
 
-.about {
-  color: blue; }
+.blog__head {
+  margin-top: 100px;
+  /* border: 2px solid red; */
+  font-size: 90px;
+  color: #ffffff;
+  font-weight: 700;
+  font-family: "Raleway", sans-serif;
+  text-align: center; }
 
-div {
-  color: red; }
+.blog__text {
+  margin-top: 27px;
+  width: 570px;
+  height: 67px;
+  font-size: 17px;
+  line-height: 25px;
+  color: #ffffff;
+  font-weight: 300;
+  font-family: "Raleway", sans-serif;
+  text-align: center; }
+
+.blog__text:hover {
+  transform: scale(1.2);
+  transition: transform 1s; }
+
+.blog__images {
+  margin-top: 47px;
+  width: 1163px;
+  height: 315px;
+  /* border: 2px solid red; */
+  display: flex;
+  align-items: center;
+  align-self: center;
+  align-items: center; }
+
+.images__image1 {
+  width: 371px;
+  height: 311px;
+  position: relative;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.5)), url("../Foto2/img.png");
+  z-index: 1; }
+
+.images__image1::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: url("../Foto2/img.png");
+  z-index: -1;
+  transition: opacity 1.5s linear;
+  opacity: 0; }
+
+.images__image2 {
+  width: 371px;
+  height: 311px;
+  margin-left: 25px;
+  margin-right: 25px;
+  background-position: bottom;
+  position: relative;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.5)), url("../Foto2/img2.png");
+  z-index: 1; }
+
+.images__image2::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: url("../Foto2/img2.png");
+  background-position: bottom;
+  z-index: -1;
+  transition: opacity 1.5s linear;
+  opacity: 0; }
+
+.images__image3 {
+  width: 371px;
+  height: 311px;
+  background-position: center;
+  position: relative;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.5)), url("../Foto2/img3.png");
+  z-index: 1; }
+
+.images__image3::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: url("../Foto2/img3.png");
+  background-position: center;
+  z-index: -1;
+  transition: opacity 1.5s linear;
+  opacity: 0; }
+
+.images__image1:hover::before,
+.images__image2:hover::before,
+.images__image3:hover::before {
+  opacity: 1; }
+
+.images__data {
+  width: 61px;
+  height: 61px;
+  /* border: 2px solid red; */
+  position: absolute;
+  left: 31px;
+  top: 37px;
+  text-align: center;
+  text-transform: uppercase;
+  padding-top: 5px;
+  border-radius: 6px;
+  background-color: rgba(36, 38, 43, 0.5); }
+
+.data__day1 {
+  font-size: 32px;
+  line-height: 25px;
+  color: #ffffff;
+  font-weight: 700;
+  font-family: "Raleway", sans-serif; }
+
+.data__day2 {
+  font-size: 21px;
+  line-height: 25px;
+  color: #ffffff;
+  font-family: "Raleway", sans-serif; }
+
+.images__data:hover {
+  animation: rotate 2s linear infinite;
+  cursor: pointer; }
+
+@keyframes rotate {
+  100% {
+    transform: rotateY(360deg); } }
+
+.images__text {
+  width: 307px;
+  height: 78px;
+  font-size: 20px;
+  line-height: 25px;
+  color: #ffffff;
+  font-weight: 700;
+  font-family: "Raleway", sans-serif;
+  position: absolute;
+  left: 20px;
+  top: 217px; }
+
+.images__text--bottom {
+  padding-top: 20px;
+  font-size: 13px;
+  line-height: 15px;
+  color: #ffffff;
+  font-weight: 300;
+  font-family: "Raleway", sans-serif; }
+
+.blog__button {
+  background-color: #f72b3b;
+  width: 265px;
+  height: 69px;
+  margin-top: 38px;
+  font-size: 20px;
+  line-height: 25px;
+  color: #ffffff;
+  font-weight: 300;
+  font-family: "Raleway", sans-serif;
+  text-align: center;
+  cursor: pointer;
+  text-transform: uppercase; }
+
+.blog__button:hover {
+  transform: scale(1.2);
+  transition: transform 1s; }
+
+.contact__container {
+  margin: auto;
+  width: 1500px;
+  height: 956px;
+  background-image: url("../Foto2/img_cont.png");
+  /* border: 2px solid red; */
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  align-items: center; }
+  .contact__container .contact__head {
+    margin-top: 100px;
+    font-size: 90px;
+    line-height: 25px;
+    color: #262626;
+    font-weight: 700;
+    font-family: "Raleway", sans-serif; }
+  .contact__container .contact__text {
+    margin-top: 60px;
+    font-size: 17px;
+    line-height: 25px;
+    color: #262626;
+    font-weight: 300;
+    font-family: "Raleway", sans-serif;
+    width: 350px;
+    height: 40px;
+    text-align: center; }
+  .contact__container .contact__main {
+    margin-top: 65px;
+    width: 1170px;
+    height: 450px;
+    /* border: 2px solid red; */
+    display: flex;
+    justify-content: space-between; }
+  .contact__container .main--form {
+    width: 500px;
+    height: 450px;
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    align-items: center;
+    justify-content: space-between; }
+  .contact__container input[type=text] {
+    font-size: 17px;
+    line-height: 25px;
+    color: #ffffff;
+    font-weight: 300;
+    font-family: "Raleway", sans-serif;
+    outline: none;
+    border: none;
+    background: rgba(0, 196, 196, 0.6);
+    width: 500px;
+    height: 50px; }
+  .contact__container ::-webkit-input-placeholder {
+    color: #ffffff;
+    padding-left: 20px; }
+  .contact__container input[type=text]:focus {
+    background-color: #00c4c4;
+    outline: none;
+    border-left: 5px solid #355B82;
+    color: #F2FCFC;
+    width: 495px; }
+  .contact__container textarea {
+    font-size: 17px;
+    line-height: 25px;
+    color: #ffffff;
+    font-weight: 300;
+    font-family: "Raleway", sans-serif;
+    outline: none;
+    border: none;
+    background: rgba(0, 196, 196, 0.6);
+    width: 500px;
+    height: 250px;
+    resize: none; }
+  .contact__container textarea:focus {
+    background-color: #00c4c4;
+    outline: none;
+    border-left: 5px solid #355B82;
+    color: #F2FCFC;
+    width: 495px; }
+  .contact__container .main--address {
+    width: 500px;
+    height: 450px;
+    /* border: 2px solid red; */
+    font-size: 17px;
+    line-height: 25px;
+    color: #262626;
+    font-weight: 700;
+    font-family: "Raleway", sans-serif; }
+  .contact__container .main--address span {
+    font-weight: 300; }
+  .contact__container .form--submit {
+    background-color: #ff6033;
+    width: 265px;
+    height: 50px;
+    margin-top: 40px;
+    font-size: 20px;
+    line-height: 25px;
+    color: #ffffff;
+    font-weight: 300;
+    font-family: "Raleway", sans-serif;
+    text-align: center;
+    cursor: pointer; }
+  .contact__container .form--submit:hover {
+    transform: scale(1.1);
+    transition: transform 0.5s; }
+  .contact__container .contact__footer {
+    width: 1500px;
+    height: 95px;
+    /* border: 2px solid red; */
+    margin-top: 36px;
+    background-color: #262626;
+    display: flex;
+    justify-content: space-between;
+    align-self: center;
+    align-items: center; }
+    .contact__container .contact__footer .footer--left {
+      font-size: 16px;
+      line-height: 25px;
+      color: #b9b9b9;
+      font-weight: 300;
+      font-family: "Raleway", sans-serif;
+      margin-left: 165px; }
+    .contact__container .contact__footer .footer--logo {
+      font-size: 25px;
+      line-height: 25px;
+      color: #b9b9b9;
+      font-weight: 400;
+      font-family: "Pacifico", sans-serif;
+      /* border: 2px solid red; */
+      transform: translate(-50%, 0); }
+    .contact__container .contact__footer .footer--right {
+      font-size: 15px;
+      line-height: 25px;
+      color: #b9b9b9;
+      font-weight: 300;
+      font-family: "Raleway", sans-serif;
+      margin-right: 165px; }
+    .contact__container .contact__footer .footer--right span {
+      color: #FF2B58;
+      font-weight: bold; }
