--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -22,12 +22,13 @@ $font-about:"Raleway", sans-serif;
     align-items: center;
     align-self: center;
     justify-content:space-between;
+  
      
     div {
         width: 400px;
         height: 100px;
         // border: 2px solid red;
-        box-shadow: 0 3px 3px 0 rgba(0,0,0,0.4);
+        
         background-color:#FFFFFF ; 
         font-size: 20px;
 line-height: 27px;
@@ -43,12 +44,16 @@ div {
     width: 300px;
    border-right: 1px solid #9d9d9d;
 }
+
 img {
   margin: auto; 
 }
     }
+.icon1:hover, .icon2:hover, .icon3:hover, .icon4:hover {
+    box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.4);
+}
     }
-    .right__head {
+    .right__text {
         width: 600px;
         height: 90px;
         font-size: 90px;
