--- a/sass/main2.scss
+++ b/sass/main2.scss
@@ -136,5 +136,59 @@
     width: 560px;
     height: 560px;  
     border-left: 1px solid #ffcc00;
+    display: flex;
+    align-items: center;
+    align-self: center;
+
+    .right--text {
+        width: 416px;
+    height: 395px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+
+    .text--head {
+        font-size: 36px;
+letter-spacing: 1px;
+line-height: 24px;
+color: #666666;
+font-weight: 900;
+font-family: "Roboto";
+text-align: center;
+    }
+    .text--searator {
+        width: 100px;
+        height: 3px;  
+        border-top: 2px solid #ffcc00;
+        margin-top: 32px;  
+    }
+    .text--function {
+        font-size: 24px;
+line-height: 36px;
+color: #666666;
+font-weight: 400;
+font-family: "Raleway";
+text-align: center;
+margin-top: 34px;
+    }
+    .text--icons{
+        width: 136px;
+        height: 32px;
+        border: 2px solid red;  
+        margin-top: 28px;
+    }
+    .text--main {
+        width: 420px;
+        height: 110px;
+        margin-top: 31px;
+        font-size: 14px;
+line-height: 24px;
+color: #333333;
+font-weight: 500;
+font-family: "Raleway";
+text-align: center;
+    }
+    }
 }
 }
