--- a/css/main2.css
+++ b/css/main2.css
@@ -109,7 +109,8 @@
     border-left: 1px solid #ffcc00;
     display: flex;
     align-items: center;
-    align-self: center; }
+    align-self: center;
+    justify-content: space-around; }
     .container .middle--right .right--text {
       width: 416px;
       height: 395px;
