--- a/sass/main2.scss
+++ b/sass/main2.scss
@@ -139,6 +139,7 @@
     display: flex;
     align-items: center;
     align-self: center;
+    justify-content: space-around;
 
     .right--text {
         width: 416px;
