--- a/css/main2.css
+++ b/css/main2.css
@@ -141,7 +141,7 @@
         margin-top: 34px; }
       .container .middle--right .right--text .text--icons {
         width: 136px;
-        height: 32px;
+        height: 35px;
         border: 2px solid red;
         margin-top: 28px; }
       .container .middle--right .right--text .text--main {
@@ -154,3 +154,58 @@
         font-weight: 500;
         font-family: "Raleway";
         text-align: center; }
+      .container .middle--right .right--text .text--footerline {
+        width: 50px;
+        height: 5px;
+        margin-top: 23px;
+        display: flex;
+        align-items: center;
+        align-self: center;
+        justify-content: space-between; }
+        .container .middle--right .right--text .text--footerline .footerline1 {
+          width: 11px;
+          height: 5px;
+          border-top: 2px solid #ffcc00; }
+        .container .middle--right .right--text .text--footerline .footerline2 {
+          width: 21px;
+          height: 5px;
+          border-top: 2px solid #ffcc00; }
+        .container .middle--right .right--text .text--footerline .footerline3 {
+          width: 11px;
+          height: 5px;
+          border-top: 2px solid #ffcc00; }
+      .container .middle--right .right--text .text--button {
+        width: 120px;
+        height: 25px;
+        font-size: 14px;
+        margin-top: 25px;
+        color: #666666;
+        font-weight: 700;
+        font-family: "Open Sans";
+        border: 2px solid #ffcc00;
+        background-color: #FFFFFF; }
+    .container .middle--right .arrow--right {
+      width: 18px;
+      height: 18px;
+      border-top: 3px solid #ffcc00;
+      border-right: 3px solid #ffcc00;
+      transform: rotate(45deg); }
+  .container .container__footer {
+    width: 52px;
+    height: 15px;
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    align-self: center;
+    justify-content: space-between; }
+    .container .container__footer .footer--circle1, .container .container__footer .footer--circle3 {
+      width: 10px;
+      height: 10px;
+      background-color: #ffcc00;
+      border-radius: 50%;
+      border: 1px solid #ffcc00; }
+    .container .container__footer .footer--circle2 {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      border: 1px solid #ffcc00; }
