--- a/sass/main2.scss
+++ b/sass/main2.scss
@@ -175,7 +175,7 @@ margin-top: 34px;
     }
     .text--icons{
         width: 136px;
-        height: 32px;
+        height: 35px;
         border: 2px solid red;  
         margin-top: 28px;
     }
@@ -190,6 +190,74 @@ font-weight: 500;
 font-family: "Raleway";
 text-align: center;
     }
+    .text--footerline {
+        width: 50px;
+        height: 5px;
+        margin-top: 23px;
+        display: flex;
+       align-items: center;
+    align-self: center;
+    justify-content: space-between;
+
+    .footerline1 {
+        width: 11px;
+        height: 5px;
+        border-top: 2px solid #ffcc00;
+    }
+    .footerline2 {
+        width: 21px;
+        height: 5px;
+        border-top: 2px solid #ffcc00;
+    }
+    .footerline3 {
+        width: 11px;
+        height: 5px;
+        border-top: 2px solid #ffcc00;
+    }
+    }
+    .text--button {
+        width: 120px;
+        height: 25px;
+        font-size: 14px;
+        margin-top:25px ;
+color: #666666;
+font-weight: 700;
+font-family: "Open Sans";
+border: 2px solid #ffcc00;
+background-color:#FFFFFF ;
+    }
+    }
+    .arrow--right {
+        width: 18px;
+        height: 18px;
+        border-top: 3px solid #ffcc00;;
+        border-right: 3px solid #ffcc00;;
+        transform: rotate(45deg);
+        
     }
 }
-}
+.container__footer{
+    width: 52px;
+        height: 15px;
+        margin-top: 40px;
+        display: flex;
+       align-items: center;
+    align-self: center;
+    justify-content: space-between;
+    .footer--circle1, .footer--circle3 {
+        width: 10px;
+        height: 10px;
+        background-color: #ffcc00;
+        border-radius: 50%;
+        border: 1px solid #ffcc00;
+    }
+        .footer--circle2 {
+            
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            border: 1px solid #ffcc00;
+            
+        }
+}}
+
