--- a/css/main2.css
+++ b/css/main2.css
@@ -132,7 +132,6 @@
         border-top: 2px solid #ffcc00;
         margin-top: 32px; }
       .container .middle--right .right--text .text--function {
-        border: 2px solid red;
         font-size: 24px;
         color: #666666;
         font-weight: 400;
@@ -140,24 +139,23 @@
         text-align: center;
         margin-top: 34px; }
       .container .middle--right .right--text .text--icons {
-        width: 250px;
-        height: 60px;
-        border: 2px solid red;
+        width: 150px;
+        height: 35px;
         margin-top: 30px;
         display: flex;
         justify-content: space-between;
         align-items: center;
         align-self: center; }
-        .container .middle--right .right--text .text--icons a {
-          width: 50px;
-          padding: 15px;
+        .container .middle--right .right--text .text--icons i {
+          padding: 5px;
+          font-size: 15px;
+          width: 20px;
+          text-align: center;
+          text-decoration: none;
           border-radius: 50%;
           color: #CCCCCC;
           background-color: #FFFFFF;
-          border: 2px solid #CCCCCC;
-          font-size: 20px;
-          text-align: center;
-          text-decoration: none; }
+          border: 2px solid #CCCCCC; }
       .container .middle--right .right--text .text--main {
         width: 420px;
         height: 120px;
@@ -167,8 +165,7 @@
         color: #333333;
         font-weight: 500;
         font-family: "Raleway";
-        text-align: center;
-        border: 2px solid red; }
+        text-align: center; }
       .container .middle--right .right--text .text--footerline {
         width: 50px;
         height: 5px;
