--- a/sass/main2.scss
+++ b/sass/main2.scss
@@ -166,7 +166,7 @@ text-align: center;
         margin-top: 32px;  
     }
     .text--function {
-        border: 2px solid red; 
+        // border: 2px solid red; 
         font-size: 24px;
 
 color: #666666;
@@ -176,27 +176,26 @@ text-align: center;
 margin-top: 34px;
     }
     .text--icons {
-        width: 250px;
-        height: 60px;
-        border: 2px solid red;  
+        width: 150px;
+        height: 35px;
+        // border: 2px solid red;  
         margin-top: 30px;
         display: flex;
         justify-content: space-between;
         align-items: center;
         align-self: center;
 
-        a {
-            width: 50px;
-            padding: 15px;
-            border-radius: 50%;
-        color: #CCCCCC;
+        i {
+            padding: 5px;
+            font-size: 15px;
+            width: 20px;
+            text-align: center;
+            text-decoration: none;
+           border-radius: 50%;
+                   color: #CCCCCC;
         background-color: #FFFFFF;
-border: 2px solid #CCCCCC;
- font-size: 20px;
-  text-align: center;
-  text-decoration: none;
-
-        }
+      border: 2px solid #CCCCCC;
+         }
     }
     .text--main {
         width: 420px;
@@ -208,7 +207,7 @@ color: #333333;
 font-weight: 500;
 font-family: "Raleway";
 text-align: center;
-border: 2px solid red;  
+// border: 2px solid red;  
     }
     .text--footerline {
         width: 50px;
