--- a/css/main2.css
+++ b/css/main2.css
@@ -45,25 +45,22 @@
       height: 1px;
       border-top: 2px solid #ffcc00; }
   .container .container__middle {
-    width: 1120px;
+    width: 1140px;
     height: 560px;
     margin-top: 38px;
     display: flex;
     align-items: center;
     align-self: center; }
     .container .container__middle .middle--left {
-      width: 560px;
+      width: 570px;
       height: 560px;
       border-right: 1px solid #ffcc00;
       display: flex;
       align-items: center;
       align-self: center; }
       .container .container__middle .middle--left .arrow--left {
-        width: 18px;
-        height: 18px;
-        border-top: 3px solid #ffcc00;
-        border-right: 3px solid #ffcc00;
-        transform: rotate(-135deg);
+        font-size: 40px;
+        color: #ffcc00;
         margin-right: 52px; }
       .container .container__middle .middle--left .image--left {
         position: relative;
@@ -100,11 +97,8 @@
         left: -15px;
         border-left: 2px solid #FFCC00;
         border-top: 2px solid #FFCC00; }
-      .container .container__middle .middle--left .middle--text {
-        width: 420px;
-        height: 560px; }
   .container .middle--right {
-    width: 560px;
+    width: 570px;
     height: 560px;
     border-left: 1px solid #ffcc00;
     display: flex;
@@ -114,6 +108,7 @@
     .container .middle--right .right--text {
       width: 420px;
       height: 450px;
+      margin-left: 85px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -177,15 +172,15 @@
         .container .middle--right .right--text .text--footerline .footerline1 {
           width: 11px;
           height: 5px;
-          border-top: 2px solid #ffcc00; }
+          border-top: 4px solid #ffcc00; }
         .container .middle--right .right--text .text--footerline .footerline2 {
           width: 21px;
           height: 5px;
-          border-top: 2px solid #ffcc00; }
+          border-top: 4px solid #ffcc00; }
         .container .middle--right .right--text .text--footerline .footerline3 {
           width: 11px;
           height: 5px;
-          border-top: 2px solid #ffcc00; }
+          border-top: 4px solid #ffcc00; }
       .container .middle--right .right--text .text--button {
         width: 120px;
         height: 25px;
@@ -197,27 +192,18 @@
         border: 2px solid #ffcc00;
         background-color: #FFFFFF; }
     .container .middle--right .arrow--right {
-      width: 18px;
-      height: 18px;
-      border-top: 3px solid #ffcc00;
-      border-right: 3px solid #ffcc00;
-      transform: rotate(45deg); }
+      font-size: 40px;
+      margin-left: 35px;
+      color: #ffcc00; }
   .container .container__footer {
-    width: 52px;
-    height: 15px;
+    width: 55px;
+    height: 12px;
     margin-top: 40px;
     display: flex;
     align-items: center;
     align-self: center;
-    justify-content: space-between; }
-    .container .container__footer .footer--circle1, .container .container__footer .footer--circle3 {
-      width: 10px;
-      height: 10px;
-      background-color: #ffcc00;
-      border-radius: 50%;
-      border: 1px solid #ffcc00; }
-    .container .container__footer .footer--circle2 {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      border: 1px solid #ffcc00; }
+    justify-content: space-between;
+    font-size: 12px;
+    color: #ffcc00; }
+    .container .container__footer .footer__circle--center {
+      font-size: 14px; }
