--- a/sass/main2.scss
+++ b/sass/main2.scss
@@ -54,7 +54,7 @@
 }
 
 .container__middle {
-        width: 1120px;
+        width: 1140px;
         height: 560px;
         margin-top: 38px;
         // border: 2px solid red;
@@ -64,7 +64,7 @@
    
 
     .middle--left  { 
-        width: 560px;
+        width: 570px;
         height: 560px;  
         border-right: 1px solid #ffcc00;
         display: flex;
@@ -73,11 +73,8 @@
 
     
     .arrow--left {
-        width: 18px;
-        height: 18px;
-        border-top: 3px solid #ffcc00;;
-        border-right: 3px solid #ffcc00;;
-        transform: rotate(-135deg);
+        font-size: 40px;
+        color:#ffcc00 ;
         margin-right: 52px;
     } 
 
@@ -125,15 +122,11 @@
     border-left: 2px solid #FFCC00;
     border-top: 2px solid #FFCC00;
  }
- .middle--text {
-    width: 420px;
-    height: 560px;
-    // border: 1px solid red;
- }
+ 
 }
 }
 .middle--right  { 
-    width: 560px;
+    width: 570px;
     height: 560px;  
     border-left: 1px solid #ffcc00;
     display: flex;
@@ -144,6 +137,7 @@
     .right--text {
         width: 420px;
     height: 450px;
+    margin-left: 85px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -221,17 +215,17 @@ text-align: center;
     .footerline1 {
         width: 11px;
         height: 5px;
-        border-top: 2px solid #ffcc00;
+        border-top: 4px solid #ffcc00;
     }
     .footerline2 {
         width: 21px;
         height: 5px;
-        border-top: 2px solid #ffcc00;
+        border-top: 4px solid #ffcc00;
     }
     .footerline3 {
         width: 11px;
         height: 5px;
-        border-top: 2px solid #ffcc00;
+        border-top: 4px solid #ffcc00;
     }
     }
     .text--button {
@@ -247,36 +241,25 @@ background-color:#FFFFFF ;
     }
     }
     .arrow--right {
-        width: 18px;
-        height: 18px;
-        border-top: 3px solid #ffcc00;;
-        border-right: 3px solid #ffcc00;;
-        transform: rotate(45deg);
-        
+        font-size: 40px;
+        margin-left:35px ;
+        color:#ffcc00 ;
     }
 }
 .container__footer{
-    width: 52px;
-        height: 15px;
+    width: 55px;
+        height: 12px;
         margin-top: 40px;
         display: flex;
        align-items: center;
     align-self: center;
     justify-content: space-between;
-    .footer--circle1, .footer--circle3 {
-        width: 10px;
-        height: 10px;
-        background-color: #ffcc00;
-        border-radius: 50%;
-        border: 1px solid #ffcc00;
-    }
-        .footer--circle2 {
-            
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            border: 1px solid #ffcc00;
-            
-        }
+    // border: 2px solid red;
+    font-size: 12px;
+            color:#ffcc00 ;
+            .footer__circle--center {
+                font-size: 14px;  
+            }
+    
 }}
 
