--- a/css/main2.css
+++ b/css/main2.css
@@ -135,17 +135,23 @@
         margin-top: 34px; }
       .container .middle--right .right--text .text--icons {
         width: 150px;
-        height: 35px;
+        height: 30px;
         margin-top: 30px;
         display: flex;
         justify-content: space-between;
         align-items: center;
         align-self: center; }
+        .container .middle--right .right--text .text--icons div {
+          display: flex;
+          justify-content: center;
+          align-items: center; }
         .container .middle--right .right--text .text--icons i {
           padding: 5px;
           font-size: 15px;
           width: 20px;
+          height: 20px;
           text-align: center;
+          line-height: 20px;
           text-decoration: none;
           border-radius: 50%;
           color: #CCCCCC;
