--- a/sass/main2.scss
+++ b/sass/main2.scss
@@ -45,6 +45,7 @@
     align-items: center;
     align-self: center;
     justify-content: space-between;
+
     .left--line, .right--line {
         box-sizing: border-box;
         width: 210px;
@@ -171,25 +172,35 @@ margin-top: 34px;
     }
     .text--icons {
         width: 150px;
-        height: 35px;
+        height: 30px;
         // border: 2px solid red;  
         margin-top: 30px;
         display: flex;
         justify-content: space-between;
         align-items: center;
         align-self: center;
-
+div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+}
         i {
             padding: 5px;
             font-size: 15px;
             width: 20px;
+            height: 20px;
             text-align: center;
+            line-height:20px;
             text-decoration: none;
            border-radius: 50%;
                    color: #CCCCCC;
         background-color: #FFFFFF;
       border: 2px solid #CCCCCC;
-         }
+   
+      
+
+              }
     }
     .text--main {
         width: 420px;
