--- a/css/main.css
+++ b/css/main.css
@@ -95,31 +95,39 @@ body {
   height: 700px;
   margin: auto;
   background-color: #00bfbf;
-  background-image: url("../Foto/img2.png");
+  background-image: url(../Foto/img2_b.png);
   background-repeat: no-repeat;
-  background-position: 170px 80px;
   display: flex;
-  flex-direction: column; }
-  .about .about__head {
-    font-size: 90px;
-    line-height: 27px;
-    color: #ffffff;
-    font-weight: 700;
-    font-family: "Raleway", sans-serif;
-    margin-top: 180px;
-    margin-left: 870px; }
-  .about .about__text {
-    width: 480px;
-    height: 190px;
-    font-size: 17px;
-    line-height: 27px;
-    color: #ffffff;
-    font-weight: 300;
-    font-family: "Raleway", sans-serif;
-    margin-top: 35px;
-    margin-left: 870px; }
-    .about .about__text div {
-      padding-top: 10px; }
+  align-self: center;
+  align-items: center;
+  justify-content: center; }
+  .about .about__conteiner {
+    width: 1170px;
+    height: 700px;
+    display: flex;
+    flex-direction: column;
+    align-self: flex-end;
+    align-items: flex-end; }
+    .about .about__conteiner .about__head {
+      font-size: 90px;
+      color: #ffffff;
+      font-weight: 700;
+      font-family: "Raleway", sans-serif;
+      width: 480px;
+      height: 90px;
+      margin-top: 160px;
+      text-align: center; }
+    .about .about__conteiner .about__text {
+      width: 480px;
+      height: 200px;
+      font-size: 17px;
+      line-height: 27px;
+      color: #ffffff;
+      font-weight: 300;
+      font-family: "Raleway", sans-serif;
+      margin-top: 35px; }
+      .about .about__conteiner .about__text div {
+        padding-top: 10px; }
 
 .services {
   width: 1500px;
@@ -130,234 +138,230 @@ body {
   background-repeat: no-repeat;
   background-position: 873px 100px;
   display: flex;
+  align-self: center;
+  align-items: center;
   justify-content: center; }
-  .services .left__icons {
-    width: 400px;
-    height: 460px;
-    margin-left: 120px;
-    margin-top: 100px;
+  .services .services__conteiner {
+    width: 1170px;
+    height: 790px;
     display: flex;
-    flex-direction: column;
+    align-self: flex-end;
     align-items: center;
-    align-self: center;
     justify-content: space-between; }
-    .services .left__icons div {
+    .services .services__conteiner .left__icons {
       width: 400px;
-      height: 100px;
-      background-color: #FFFFFF;
-      font-size: 20px;
-      line-height: 27px;
-      color: #262626;
-      font-weight: 700;
-      font-family: "Raleway", sans-serif;
+      height: 460px;
+      margin-left: 120px;
+      margin-top: 60px;
       display: flex;
+      flex-direction: column;
       align-items: center;
       align-self: center;
-      justify-content: center;
-      text-align: center; }
-      .services .left__icons div div {
-        width: 300px;
-        border-right: 1px solid #9d9d9d; }
-      .services .left__icons div img {
-        margin: auto; }
-    .services .left__icons .icon1:hover, .services .left__icons .icon2:hover, .services .left__icons .icon3:hover, .services .left__icons .icon4:hover {
-      box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.4); }
-  .services .right__text {
-    width: 600px;
-    height: 90px;
-    font-size: 90px;
-    color: #ffffff;
-    font-weight: 700;
-    font-family: "Raleway", sans-serif;
-    text-align: center;
-    margin-left: 110px;
-    margin-top: 260px;
-    transform: translate(0, 50%); }
+      justify-content: space-between; }
+      .services .services__conteiner .left__icons div {
+        width: 400px;
+        height: 100px;
+        background-color: #FFFFFF;
+        font-size: 20px;
+        line-height: 27px;
+        color: #262626;
+        font-weight: 700;
+        font-family: "Raleway", sans-serif;
+        display: flex;
+        align-items: center;
+        align-self: center;
+        justify-content: center;
+        text-align: center; }
+        .services .services__conteiner .left__icons div div {
+          width: 300px;
+          border-right: 1px solid #9d9d9d; }
+        .services .services__conteiner .left__icons div img {
+          margin: auto; }
+      .services .services__conteiner .left__icons .icon1:hover, .services .services__conteiner .left__icons .icon2:hover, .services .services__conteiner .left__icons .icon3:hover, .services .services__conteiner .left__icons .icon4:hover {
+        box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.4); }
+    .services .services__conteiner .right__text {
+      width: 550px;
+      height: 100px;
+      font-size: 90px;
+      color: #ffffff;
+      text-align: center;
+      font-weight: 700;
+      font-family: "Raleway", sans-serif;
+      text-align: center;
+      margin-top: -50px; }
 
-.blog__container {
+.blog {
   padding: 0;
   background: #b07cf7;
   width: 1500px;
   height: 864px;
   margin: auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-self: center; }
-
-.blog__head {
-  margin-top: 100px;
-  /* border: 2px solid red; */
-  font-size: 90px;
-  color: #ffffff;
-  font-weight: 700;
-  font-family: "Raleway", sans-serif;
-  text-align: center; }
-
-.blog__text {
-  margin-top: 27px;
-  width: 570px;
-  height: 67px;
-  font-size: 17px;
-  line-height: 25px;
-  color: #ffffff;
-  font-weight: 300;
-  font-family: "Raleway", sans-serif;
-  text-align: center; }
-
-.blog__text:hover {
-  transform: scale(1.2);
-  transition: transform 1s; }
-
-.blog__images {
-  margin-top: 47px;
-  width: 1163px;
-  height: 315px;
-  /* border: 2px solid red; */
-  display: flex;
   align-items: center;
   align-self: center;
-  align-items: center; }
-
-.images__image1 {
-  width: 371px;
-  height: 311px;
-  position: relative;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.5)), url("../Foto2/img.png");
-  z-index: 1; }
-
-.images__image1::before {
-  position: absolute;
-  content: "";
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-image: url("../Foto2/img.png");
-  z-index: -1;
-  transition: opacity 1.5s linear;
-  opacity: 0; }
-
-.images__image2 {
-  width: 371px;
-  height: 311px;
-  margin-left: 25px;
-  margin-right: 25px;
-  background-position: bottom;
-  position: relative;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.5)), url("../Foto2/img2.png");
-  z-index: 1; }
-
-.images__image2::before {
-  position: absolute;
-  content: "";
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-image: url("../Foto2/img2.png");
-  background-position: bottom;
-  z-index: -1;
-  transition: opacity 1.5s linear;
-  opacity: 0; }
-
-.images__image3 {
-  width: 371px;
-  height: 311px;
-  background-position: center;
-  position: relative;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.5)), url("../Foto2/img3.png");
-  z-index: 1; }
-
-.images__image3::before {
-  position: absolute;
-  content: "";
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-image: url("../Foto2/img3.png");
-  background-position: center;
-  z-index: -1;
-  transition: opacity 1.5s linear;
-  opacity: 0; }
-
-.images__image1:hover::before,
-.images__image2:hover::before,
-.images__image3:hover::before {
-  opacity: 1; }
-
-.images__data {
-  width: 61px;
-  height: 61px;
-  /* border: 2px solid red; */
-  position: absolute;
-  left: 31px;
-  top: 37px;
-  text-align: center;
-  text-transform: uppercase;
-  padding-top: 5px;
-  border-radius: 6px;
-  background-color: rgba(36, 38, 43, 0.5); }
-
-.data__day1 {
-  font-size: 32px;
-  line-height: 25px;
-  color: #ffffff;
-  font-weight: 700;
-  font-family: "Raleway", sans-serif; }
-
-.data__day2 {
-  font-size: 21px;
-  line-height: 25px;
-  color: #ffffff;
-  font-family: "Raleway", sans-serif; }
-
-.images__data:hover {
-  animation: rotate 2s linear infinite;
-  cursor: pointer; }
+  justify-content: center; }
+  .blog .blog__container {
+    width: 1170px;
+    height: 864px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center; }
+  .blog .blog__head {
+    margin-top: 100px;
+    /* border: 2px solid red; */
+    font-size: 90px;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Raleway", sans-serif;
+    text-align: center; }
+  .blog .blog__text {
+    margin-top: 27px;
+    width: 570px;
+    height: 67px;
+    font-size: 17px;
+    line-height: 25px;
+    color: #ffffff;
+    font-weight: 300;
+    font-family: "Raleway", sans-serif;
+    text-align: center; }
+  .blog .blog__text:hover {
+    transform: scale(1.2);
+    transition: transform 1s; }
+  .blog .blog__images {
+    margin-top: 47px;
+    width: 1170px;
+    height: 315px;
+    /* border: 2px solid red; */
+    display: flex;
+    align-items: center;
+    align-self: center;
+    justify-content: space-between; }
+  .blog .images__image1 {
+    width: 371px;
+    height: 311px;
+    position: relative;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.5)), url("../Foto2/img.png");
+    z-index: 1; }
+  .blog .images__image1::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: url("../Foto2/img.png");
+    z-index: -1;
+    transition: opacity 1.5s linear;
+    opacity: 0; }
+  .blog .images__image2 {
+    width: 371px;
+    height: 311px;
+    margin-left: 25px;
+    margin-right: 25px;
+    background-position: bottom;
+    position: relative;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.5)), url("../Foto2/img2.png");
+    z-index: 1; }
+  .blog .images__image2::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: url("../Foto2/img2.png");
+    background-position: bottom;
+    z-index: -1;
+    transition: opacity 1.5s linear;
+    opacity: 0; }
+  .blog .images__image3 {
+    width: 371px;
+    height: 311px;
+    background-position: center;
+    position: relative;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.5)), url("../Foto2/img3.png");
+    z-index: 1; }
+  .blog .images__image3::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: url("../Foto2/img3.png");
+    background-position: center;
+    z-index: -1;
+    transition: opacity 1.5s linear;
+    opacity: 0; }
+  .blog .images__image1:hover::before,
+  .blog .images__image2:hover::before,
+  .blog .images__image3:hover::before {
+    opacity: 1; }
+  .blog .images__data {
+    width: 61px;
+    height: 61px;
+    /* border: 2px solid red; */
+    position: absolute;
+    left: 31px;
+    top: 37px;
+    text-align: center;
+    text-transform: uppercase;
+    padding-top: 5px;
+    border-radius: 6px;
+    background-color: rgba(36, 38, 43, 0.5); }
+  .blog .data__day1 {
+    font-size: 32px;
+    line-height: 25px;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Raleway", sans-serif; }
+  .blog .data__day2 {
+    font-size: 21px;
+    line-height: 25px;
+    color: #ffffff;
+    font-family: "Raleway", sans-serif; }
+  .blog .images__data:hover {
+    animation: rotate 2s linear infinite;
+    cursor: pointer; }
 
 @keyframes rotate {
   100% {
     transform: rotateY(360deg); } }
-
-.images__text {
-  width: 307px;
-  height: 78px;
-  font-size: 20px;
-  line-height: 25px;
-  color: #ffffff;
-  font-weight: 700;
-  font-family: "Raleway", sans-serif;
-  position: absolute;
-  left: 20px;
-  top: 217px; }
-
-.images__text--bottom {
-  padding-top: 20px;
-  font-size: 13px;
-  line-height: 15px;
-  color: #ffffff;
-  font-weight: 300;
-  font-family: "Raleway", sans-serif; }
-
-.blog__button {
-  background-color: #f72b3b;
-  width: 265px;
-  height: 69px;
-  margin-top: 38px;
-  font-size: 20px;
-  line-height: 25px;
-  color: #ffffff;
-  font-weight: 300;
-  font-family: "Raleway", sans-serif;
-  text-align: center;
-  cursor: pointer;
-  text-transform: uppercase; }
-
-.blog__button:hover {
-  transform: scale(1.2);
-  transition: transform 1s; }
+  .blog .images__text {
+    width: 307px;
+    height: 78px;
+    font-size: 20px;
+    line-height: 25px;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Raleway", sans-serif;
+    position: absolute;
+    left: 20px;
+    top: 217px; }
+  .blog .images__text--bottom {
+    padding-top: 20px;
+    font-size: 13px;
+    line-height: 15px;
+    color: #ffffff;
+    font-weight: 300;
+    font-family: "Raleway", sans-serif; }
+  .blog .blog__button {
+    background-color: #f72b3b;
+    width: 265px;
+    height: 69px;
+    margin-top: 38px;
+    font-size: 20px;
+    line-height: 25px;
+    color: #ffffff;
+    font-weight: 300;
+    font-family: "Raleway", sans-serif;
+    text-align: center;
+    cursor: pointer;
+    text-transform: uppercase; }
+  .blog .blog__button:hover {
+    transform: scale(1.2);
+    transition: transform 1s; }
 
 .contact__container {
   margin: auto;
