--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -1,15 +1,24 @@
 
-.blog__container {
+.blog {
     padding: 0;
     background: #b07cf7;
     width: 1500px;
     height: 864px;
     margin: auto;
     display: flex;
+    align-items: center;
+    align-self: center;
+    justify-content: center;
+    .blog__container {
+      width: 1170px;
+      height: 864px;
+      //  border: 2px solid red;
+      display: flex;
     flex-direction: column;
     align-items: center;
     align-self: center;
-  }
+    }
+  
   .blog__head {
     margin-top: 100px;
     /* border: 2px solid red; */
@@ -39,13 +48,13 @@
   
   .blog__images {
     margin-top: 47px;
-    width: 1163px;
+    width: 1170px;
     height: 315px;
     /* border: 2px solid red; */
     display: flex;
     align-items: center;
     align-self: center;
-    align-items: center;
+    justify-content: space-between;
   }
   
   .images__image1 {
@@ -213,4 +222,4 @@
     transform: scale(1.2);
     transition: transform 1s;
   }
-  
+}
