--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -8,15 +8,25 @@ $font-about:"Raleway", sans-serif;
     background-repeat: no-repeat;
     background-position: 873px 100px;
     display: flex;
-    justify-content:center;
+        align-self:center;
+        align-items: center;
+        justify-content: center;
     
-
+    .services__conteiner {
+        width: 1170px;
+        height: 790px;
+        //  border: 2px solid red;
+        display: flex;
+        align-self:flex-end;
+        align-items: center;
+        justify-content: space-between;
+    
     .left__icons {
         width: 400px;
         height: 460px;
         // border: 2px solid red;
         margin-left:120px ;
- margin-top:100px ;
+ margin-top:60px ;
  display: flex;
     flex-direction: column;
     align-items: center;
@@ -54,16 +64,16 @@ img {
 }
     }
     .right__text {
-        width: 600px;
-        height: 90px;
+        width: 550px;
+        height: 100px;
         font-size: 90px;
 color: #ffffff;
+text-align: center;
 font-weight: 700;
 font-family: $font-about;
 text-align: center;
 //  border: 2px solid red;
- margin-left:110px ;
- margin-top:260px ;
- transform: translate(0,50%);
+margin-top: -50px;
     }
+}
 }
