--- a/css/main.css
+++ b/css/main.css
@@ -190,6 +190,116 @@ body {
       text-align: center;
       margin-top: -50px; }
 
+.gallery {
+  background: #FFE92F;
+  width: 1500px;
+  height: 1537px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  align-self: center;
+  justify-content: center; }
+  .gallery .gallery__container {
+    width: 1170px;
+    height: 1537px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center; }
+    .gallery .gallery__container .gallery__head {
+      margin-top: 100px;
+      /* border: 2px solid red; */
+      font-size: 90px;
+      color: #262626;
+      font-weight: 700;
+      font-family: "Raleway", sans-serif;
+      text-align: center; }
+    .gallery .gallery__container .gallery__text {
+      margin-top: 27px;
+      width: 570px;
+      height: 67px;
+      font-size: 17px;
+      line-height: 25px;
+      color: #262626;
+      font-weight: 300;
+      font-family: "Raleway", sans-serif;
+      text-align: center; }
+    .gallery .gallery__container .gallery__text:hover {
+      transform: scale(1.2);
+      transition: transform 1s; }
+    .gallery .gallery__container .gallery__images {
+      margin-top: 41px;
+      width: 1170px;
+      height: 990px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      align-self: center;
+      justify-content: space-between; }
+      .gallery .gallery__container .gallery__images .images--line1 {
+        width: 1170px;
+        height: 550px;
+        display: flex;
+        align-items: center;
+        align-self: center;
+        justify-content: space-between; }
+        .gallery .gallery__container .gallery__images .images--line1 .line1--img1 {
+          width: 770px;
+          height: 550px;
+          background-image: url(../Foto2/gallery_img1.png);
+          background-position: center; }
+        .gallery .gallery__container .gallery__images .images--line1 .line1--img2 {
+          width: 370px;
+          height: 550px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          align-self: center;
+          justify-content: space-between; }
+          .gallery .gallery__container .gallery__images .images--line1 .line1--img2 .img2_1 {
+            width: 370px;
+            height: 260px;
+            background-image: url(../Foto2/gallery_img2.png);
+            background-position: center; }
+          .gallery .gallery__container .gallery__images .images--line1 .line1--img2 .img2_2 {
+            width: 370px;
+            height: 260px;
+            background-image: url(../Foto2/gallery_img3.png);
+            background-position: center; }
+      .gallery .gallery__container .gallery__images .images--line2 {
+        width: 1170px;
+        height: 410px;
+        display: flex;
+        align-items: center;
+        align-self: center;
+        justify-content: space-between; }
+        .gallery .gallery__container .gallery__images .images--line2 .line2--img1 {
+          width: 570px;
+          height: 410px;
+          background-image: url(../Foto2/gallery_img4.png);
+          background-position: center; }
+        .gallery .gallery__container .gallery__images .images--line2 .line2--img2 {
+          width: 570px;
+          height: 410px;
+          background-image: url(../Foto2/gallery_img5.png);
+          background-position: center; }
+    .gallery .gallery__container .gallery__button {
+      background-color: #5585A2;
+      width: 200px;
+      height: 56px;
+      margin-top: 40px;
+      font-size: 20px;
+      line-height: 25px;
+      color: #ffffff;
+      font-weight: 300;
+      font-family: "Raleway", sans-serif;
+      text-align: center;
+      cursor: pointer;
+      text-transform: uppercase; }
+    .gallery .gallery__container .gallery__button:hover {
+      transform: scale(1.2);
+      transition: transform 1s; }
+
 .blog {
   padding: 0;
   background: #b07cf7;
@@ -207,161 +317,161 @@ body {
     flex-direction: column;
     align-items: center;
     align-self: center; }
-  .blog .blog__head {
-    margin-top: 100px;
-    /* border: 2px solid red; */
-    font-size: 90px;
-    color: #ffffff;
-    font-weight: 700;
-    font-family: "Raleway", sans-serif;
-    text-align: center; }
-  .blog .blog__text {
-    margin-top: 27px;
-    width: 570px;
-    height: 67px;
-    font-size: 17px;
-    line-height: 25px;
-    color: #ffffff;
-    font-weight: 300;
-    font-family: "Raleway", sans-serif;
-    text-align: center; }
-  .blog .blog__text:hover {
-    transform: scale(1.2);
-    transition: transform 1s; }
-  .blog .blog__images {
-    margin-top: 47px;
-    width: 1170px;
-    height: 315px;
-    /* border: 2px solid red; */
-    display: flex;
-    align-items: center;
-    align-self: center;
-    justify-content: space-between; }
-  .blog .images__image1 {
-    width: 371px;
-    height: 311px;
-    position: relative;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.5)), url("../Foto2/img.png");
-    z-index: 1; }
-  .blog .images__image1::before {
-    position: absolute;
-    content: "";
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-image: url("../Foto2/img.png");
-    z-index: -1;
-    transition: opacity 1.5s linear;
-    opacity: 0; }
-  .blog .images__image2 {
-    width: 371px;
-    height: 311px;
-    margin-left: 25px;
-    margin-right: 25px;
-    background-position: bottom;
-    position: relative;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.5)), url("../Foto2/img2.png");
-    z-index: 1; }
-  .blog .images__image2::before {
-    position: absolute;
-    content: "";
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-image: url("../Foto2/img2.png");
-    background-position: bottom;
-    z-index: -1;
-    transition: opacity 1.5s linear;
-    opacity: 0; }
-  .blog .images__image3 {
-    width: 371px;
-    height: 311px;
-    background-position: center;
-    position: relative;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.5)), url("../Foto2/img3.png");
-    z-index: 1; }
-  .blog .images__image3::before {
-    position: absolute;
-    content: "";
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-image: url("../Foto2/img3.png");
-    background-position: center;
-    z-index: -1;
-    transition: opacity 1.5s linear;
-    opacity: 0; }
-  .blog .images__image1:hover::before,
-  .blog .images__image2:hover::before,
-  .blog .images__image3:hover::before {
-    opacity: 1; }
-  .blog .images__data {
-    width: 61px;
-    height: 61px;
-    /* border: 2px solid red; */
-    position: absolute;
-    left: 31px;
-    top: 37px;
-    text-align: center;
-    text-transform: uppercase;
-    padding-top: 5px;
-    border-radius: 6px;
-    background-color: rgba(36, 38, 43, 0.5); }
-  .blog .data__day1 {
-    font-size: 32px;
-    line-height: 25px;
-    color: #ffffff;
-    font-weight: 700;
-    font-family: "Raleway", sans-serif; }
-  .blog .data__day2 {
-    font-size: 21px;
-    line-height: 25px;
-    color: #ffffff;
-    font-family: "Raleway", sans-serif; }
-  .blog .images__data:hover {
-    animation: rotate 2s linear infinite;
-    cursor: pointer; }
+    .blog .blog__container .blog__head {
+      margin-top: 100px;
+      /* border: 2px solid red; */
+      font-size: 90px;
+      color: #ffffff;
+      font-weight: 700;
+      font-family: "Raleway", sans-serif;
+      text-align: center; }
+    .blog .blog__container .blog__text {
+      margin-top: 27px;
+      width: 570px;
+      height: 67px;
+      font-size: 17px;
+      line-height: 25px;
+      color: #ffffff;
+      font-weight: 300;
+      font-family: "Raleway", sans-serif;
+      text-align: center; }
+    .blog .blog__container .blog__text:hover {
+      transform: scale(1.2);
+      transition: transform 1s; }
+    .blog .blog__container .blog__images {
+      margin-top: 47px;
+      width: 1170px;
+      height: 315px;
+      /* border: 2px solid red; */
+      display: flex;
+      align-items: center;
+      align-self: center;
+      justify-content: space-between; }
+    .blog .blog__container .images__image1 {
+      width: 371px;
+      height: 311px;
+      position: relative;
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.5)), url("../Foto2/img.png");
+      z-index: 1; }
+    .blog .blog__container .images__image1::before {
+      position: absolute;
+      content: "";
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-image: url("../Foto2/img.png");
+      z-index: -1;
+      transition: opacity 1.5s linear;
+      opacity: 0; }
+    .blog .blog__container .images__image2 {
+      width: 371px;
+      height: 311px;
+      margin-left: 25px;
+      margin-right: 25px;
+      background-position: bottom;
+      position: relative;
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.5)), url("../Foto2/img2.png");
+      z-index: 1; }
+    .blog .blog__container .images__image2::before {
+      position: absolute;
+      content: "";
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-image: url("../Foto2/img2.png");
+      background-position: bottom;
+      z-index: -1;
+      transition: opacity 1.5s linear;
+      opacity: 0; }
+    .blog .blog__container .images__image3 {
+      width: 371px;
+      height: 311px;
+      background-position: center;
+      position: relative;
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.5)), url("../Foto2/img3.png");
+      z-index: 1; }
+    .blog .blog__container .images__image3::before {
+      position: absolute;
+      content: "";
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-image: url("../Foto2/img3.png");
+      background-position: center;
+      z-index: -1;
+      transition: opacity 1.5s linear;
+      opacity: 0; }
+    .blog .blog__container .images__image1:hover::before,
+    .blog .blog__container .images__image2:hover::before,
+    .blog .blog__container .images__image3:hover::before {
+      opacity: 1; }
+    .blog .blog__container .images__data {
+      width: 61px;
+      height: 61px;
+      /* border: 2px solid red; */
+      position: absolute;
+      left: 31px;
+      top: 37px;
+      text-align: center;
+      text-transform: uppercase;
+      padding-top: 5px;
+      border-radius: 6px;
+      background-color: rgba(36, 38, 43, 0.5); }
+    .blog .blog__container .data__day1 {
+      font-size: 32px;
+      line-height: 25px;
+      color: #ffffff;
+      font-weight: 700;
+      font-family: "Raleway", sans-serif; }
+    .blog .blog__container .data__day2 {
+      font-size: 21px;
+      line-height: 25px;
+      color: #ffffff;
+      font-family: "Raleway", sans-serif; }
+    .blog .blog__container .images__data:hover {
+      animation: rotate 2s linear infinite;
+      cursor: pointer; }
 
 @keyframes rotate {
   100% {
     transform: rotateY(360deg); } }
-  .blog .images__text {
-    width: 307px;
-    height: 78px;
-    font-size: 20px;
-    line-height: 25px;
-    color: #ffffff;
-    font-weight: 700;
-    font-family: "Raleway", sans-serif;
-    position: absolute;
-    left: 20px;
-    top: 217px; }
-  .blog .images__text--bottom {
-    padding-top: 20px;
-    font-size: 13px;
-    line-height: 15px;
-    color: #ffffff;
-    font-weight: 300;
-    font-family: "Raleway", sans-serif; }
-  .blog .blog__button {
-    background-color: #f72b3b;
-    width: 265px;
-    height: 69px;
-    margin-top: 38px;
-    font-size: 20px;
-    line-height: 25px;
-    color: #ffffff;
-    font-weight: 300;
-    font-family: "Raleway", sans-serif;
-    text-align: center;
-    cursor: pointer;
-    text-transform: uppercase; }
-  .blog .blog__button:hover {
-    transform: scale(1.2);
-    transition: transform 1s; }
+    .blog .blog__container .images__text {
+      width: 307px;
+      height: 78px;
+      font-size: 20px;
+      line-height: 25px;
+      color: #ffffff;
+      font-weight: 700;
+      font-family: "Raleway", sans-serif;
+      position: absolute;
+      left: 20px;
+      top: 217px; }
+    .blog .blog__container .images__text--bottom {
+      padding-top: 20px;
+      font-size: 13px;
+      line-height: 15px;
+      color: #ffffff;
+      font-weight: 300;
+      font-family: "Raleway", sans-serif; }
+    .blog .blog__container .blog__button {
+      background-color: #f72b3b;
+      width: 200px;
+      height: 56px;
+      margin-top: 38px;
+      font-size: 20px;
+      line-height: 25px;
+      color: #ffffff;
+      font-weight: 300;
+      font-family: "Raleway", sans-serif;
+      text-align: center;
+      cursor: pointer;
+      text-transform: uppercase; }
+    .blog .blog__container .blog__button:hover {
+      transform: scale(1.2);
+      transition: transform 1s; }
 
 .contact {
   margin: auto;
@@ -463,8 +573,8 @@ body {
         font-weight: 300; }
     .contact .contact__container .form--submit {
       background-color: #ff6033;
-      width: 265px;
-      height: 50px;
+      width: 200px;
+      height: 56px;
       margin-top: 40px;
       font-size: 20px;
       line-height: 25px;
@@ -473,9 +583,9 @@ body {
       font-family: "Raleway", sans-serif;
       text-align: center;
       cursor: pointer; }
-      .contact .contact__container .form--submit .form--submit:hover {
-        transform: scale(1.1);
-        transition: transform 0.5s; }
+    .contact .contact__container .form--submit:hover {
+      transform: scale(1.1);
+      transition: transform 1s; }
     .contact .contact__container .contact__footer {
       width: 1500px;
       height: 95px;
