--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -17,7 +17,7 @@
     flex-direction: column;
     align-items: center;
     align-self: center;
-    }
+    
   
   .blog__head {
     margin-top: 100px;
@@ -206,8 +206,8 @@
   
   .blog__button {
     background-color: #f72b3b;
-    width: 265px;
-    height: 69px;
+    width: 200px;
+    height: 56px;
     margin-top: 38px;
     font-size: 20px;
     line-height: 25px;
@@ -221,5 +221,5 @@
   .blog__button:hover {
     transform: scale(1.2);
     transition: transform 1s;
-  }
+  }}
 }
